# core-pdfminer.six

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  asv.conf.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: actions.yml  cifuzz.yml
benchmarks/: __init__.py  cmaps.py  common.py  converters.py  filters.py  layout.py  parsing.py  representative.py
core_pdfminer_six/: __init__.py  _saslprep.py  casting.py  ccitt.py  cmapdb.py  converter.py  data_structures.py  encodingdb.py  glyphlist.py  high_level.py  image.py  jbig2.py  layout.py  lzw.py  pdfcolor.py  pdfdevice.py  pdfdocument.py  pdfexceptions.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdftypes.py  psparser.py  utils.py
core_pdfminer_six/cmap/: README.txt
docs/: README.md  benchmarking.md
docs/repo/: CONTRIBUTING.md
docs/source/: conf.py  faq.rst  index.rst
docs/source/howto/: acro_forms.rst  character_properties.rst  images.rst  index.rst  toc_target_page.rst
docs/source/reference/: composable.rst  highlevel.rst
docs/source/topic/: converting_pdf_to_text.rst
docs/source/tutorial/: commandline.rst  composable.rst  extract_pages.rst  highlevel.rst  index.rst  install.rst
fuzzing/: extract_text_fuzzer.py  extract_text_to_fp_fuzzer.py  page_extraction_fuzzer.py  utils.py
pdfminer/: _saslprep.py  casting.py  ccitt.py  cmapdb.py  converter.py  encodingdb.py  high_level.py  image.py  jbig2.py  layout.py  lzw.py  pdfdevice.py  pdfdocument.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdftypes.py  psparser.py  utils.py
tests/: helpers.py  test_casting.py  test_cmapdb.py  test_cmapdb_security.py  test_converter.py  test_core_regressions.py  test_encodingdb.py  test_font_size.py  test_highlevel_extracttext.py  test_layout.py  test_pdfdocument.py  test_pdfencoding.py  test_pdffont.py  test_pdfminer_ccitt.py  test_pdfminer_crypto.py  test_pdfminer_psparser.py  test_pdfpage.py  test_tools_dumppdf.py  test_tools_pdf2txt.py  test_utils.py
tools/: convert_cmaps_to_json.py  dumppdf.py  pdf2txt.py
