[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core-pdfminer.six"
version = "0.0.0"
description = "PDF parser and analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Shinyama" },
    { name = "Philippe Guglielmetti", email = "pdfminer@goulu.net" },
    { name = "Pieter Marsman" },
]
keywords = [
    "layout analysis",
    "pdf converter",
    "pdf parser",
    "text mining",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
]
dependencies = [
    "charset-normalizer >= 2.0.0",
    "cryptography >= 36.0.0",
]

[project.optional-dependencies]
image = [
    "Pillow",
]

[dependency-groups]
benchmark = [
    "asv>=0.6.6",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "codespell",
]
docs = [
    "sphinx",
    "sphinx-argparse",
]
fuzz = [
    "atheris",
]


[project.urls]
Homepage = "https://github.com/core-experiments/core-pdfminer.six"

[tool.setuptools]
packages = ["core_pdfminer_six"]
include-package-data = false
script-files = [
    "tools/pdf2txt.py",
    "tools/dumppdf.py",
]

[tool.setuptools.package-data]
core_pdfminer_six = ["py.typed", "cmap/*.json.gz", "cmap/*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "TID",  # flake8 tidy imports
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "G",  # flake8-logging-format
]
extend-ignore = [
    # UP007: Union to | syntax breaks mypy 0.931 in TypeAlias definitions
    # Can be removed once mypy is updated to support PEP 604 syntax in TypeAlias
    "UP007",
    # RUF001: Intentional use of fullwidth Chinese characters in test strings
    "RUF001",
]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF001", "RUF012"]  # Allow ambiguous unicode and mutable class attributes in tests

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# This seems impossible to turn on in a version-independent manner
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "core_pdfminer_six.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "cryptography.hazmat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "charset_normalizer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atheris.*"
ignore_missing_imports = true
